# NEWSimplify

./: .gitignore  README.md  article.py  newsimplify.py  pyproject.toml  websearch.py
